--- a/contributor-docs/call-for-contributions.qmd
+++ b/contributor-docs/call-for-contributions.qmd
@@ -11,9 +11,9 @@ Below is a list of our core content areas. We welcome submissions in any of thes
 
 * [Case studies](case-studies.qmd)
 * [Explainers](explainers.qmd)
-* Exercises
+* [Exercises](exercises.qmd)
 * [Datasets](datasets.qmd)
-* Training guides
+* [Training guides](contributor-docs\training-guides.qmd)
 * [Recommender](recommender.qmd)
 
 Submissions can focus on any and all topics and application areas. We want our content to reflect the breadth and depth of real-world data science. 
