--- a/contributor-docs/index.qmd
+++ b/contributor-docs/index.qmd
@@ -13,7 +13,7 @@ Below is a list of our core content areas. We welcome submissions in any of thes
 * [Explainers](explainers.qmd)
 * [Exercises](exercises.qmd)
 * [Datasets](datasets.qmd)
-* [Training guides](contributor-docs\training-guides.qmd)
+* [Training guides](training-guides.qmd)
 * [Recommender](recommender.qmd)
 
 Submissions can focus on any and all topics and application areas. We want our content to reflect the breadth and depth of real-world data science. 
@@ -25,4 +25,4 @@ Real World Data Science is for all who work in data science - whether they are s
 We encourage contributors to experiment with and include different media formats in their submissions - text, images, audio and video. And as our site is built on [Quarto](https://quarto.org/) - the new open-source publishing system developed by [RStudio](https://www.rstudio.com/) - submissions to Real World Data Science can also include code cells, equations, figures, interactive data displays, and other elements to enrich the user experience. If you haven't used Quarto before, check out this fantastic [tutorial](https://quarto.org/docs/get-started/) from the developers.
 
 ## How to submit
-Once you've reviewed our notes for contributors and settled on a content area, theme and audience, please review our [contributor guidelines](call-for-contributions.qmd) for details on the submission process.
+Once you've reviewed our notes for contributors and settled on a content area, theme and audience, please review our [contributor guidelines](contributor-guidelines.qmd) for details on the submission process.
