--- a/index.qmd
+++ b/index.qmd
@@ -28,4 +28,4 @@ Resources will also be *curated* to help data scientists identify trustworthy, h
 * **Feeds** – who and what to follow to keep up with new ideas and developments.
 
 ## How you can get involved
-See our open [call for contributions](contributor-docs\call-for-contributions.qmd).
+See our open [call for contributions](contributor-docs/call-for-contributions.qmd).
