--- a/contributor-docs/contributor-guidelines.qmd
+++ b/contributor-docs/contributor-guidelines.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Contributor guidelines"
 ---
-Thank you for your interest in contributing to Real World Data Science. This page will walk you through the process of preparing and submitting your idea. If you haven't done so already, please review our [call for contributions](call-for-contributions.qmd) before continuing.
+Thank you for your interest in contributing to Real World Data Science. This page will walk you through the process of preparing and submitting your idea. If you haven't done so already, please review our [call for contributions](index.qmd) before continuing.
 
 ## Site functionality and ethos
 Real World Data Science is built on [Quarto](https://quarto.org/), the new open-source publishing system developed by [RStudio](https://www.rstudio.com/). The site has been designed from the ground up as a platform for data scientists, created by data scientists. Here’s what this means in practice:  
