minor text edits

--- a/contributor-docs/call-for-contributions.qmd
+++ b/contributor-docs/call-for-contributions.qmd
@@ -14,7 +14,7 @@ Below is a list of our core content areas. We welcome submissions in any of thes
 * [Exercises](exercises.qmd)
 * [Datasets](datasets.qmd)
 * [Training guides](training-guides.qmd)
-* [Recommender](recommender.qmd)
+* [Recommenders](recommender.qmd)
 
 Submissions can focus on any and all topics and application areas. We want our content to reflect the breadth and depth of real-world data science. 
 
