--- a/contributor-docs/contributor-guidelines.qmd
+++ b/contributor-docs/contributor-guidelines.qmd
@@ -32,7 +32,7 @@ Real World Data Science is built on [Quarto](https://quarto.org/), the new open-
 
 4. Draft submissions should be sent via email to the editor. Alternatively, contributors can commit their drafts to their own GitHub accounts and add the [Real World Data Science GitHub account](https://github.com/realworlddatascience) as a collaborator. 
 
-## Copyright and content licencing: 
+## Copyright and content licencing 
 Contributors retain copyright of their work, but agree to publish their work under a Creative Commons licence. Contributors are free to [choose the licence](https://creativecommons.org/choose/) that best suits their content. The chosen licence should be indicated on the draft submission.
 
 ## The review process
