--- a/contributor-docs/recommender.qmd
+++ b/contributor-docs/recommender.qmd
@@ -1,8 +1,8 @@
 ---
-title: "Recommender"
+title: "Recommenders"
 subtitle: "Notes for contributors"
 ---
-Too much content, not enough time. That about sums up the problem facing the data science community. Our **Recommender** section is here to help. Contributors are invited to submit lists (or **Feeds**) of high-quality sources on all manner of topics – from foundational ideas in data science and cutting-edge techniques, to opinion and thought-leadership on the future of the profession. **Reviews** of new books and other material are also welcome. 
+Too much content, not enough time. That about sums up the problem facing the data science community. So, our **Recommenders** are here to help. Contributors are invited to submit lists (or **Feeds**) of high-quality sources on all manner of topics – from foundational ideas in data science and cutting-edge techniques, to opinion and thought-leadership on the future of the profession. **Reviews** of new books and other material are also welcome. 
 
 ## Article types and structures 
 
