small text edits

--- a/contributor-docs/case-studies.qmd
+++ b/contributor-docs/case-studies.qmd
@@ -2,7 +2,7 @@
 title: "Case studies"
 subtitle: "Notes for contributors"
 ---
-Case studies are a core feature of the Real World Data Science platform. Our case studies are designed to show how data science is used to solve real-world problems in business, public policy and beyond. 
+**Case studies** are a core feature of the Real World Data Science platform. Our case studies are designed to show how data science is used to solve real-world problems in business, public policy and beyond. 
 
 A good case study will be a source of information, insight and inspiration for each of our target audiences: 
 
