--- a/contributor-docs/training-guides.qmd
+++ b/contributor-docs/training-guides.qmd
@@ -14,7 +14,7 @@ Guides should feature a mix of content types – not only text, but audio and vi
 
 A brief and extremely simplified example of a guide is as follows: 
 
-* **Step 1:** Watch this introductory video on Topic X 
+* **Step 1:** Watch this introductory video on Topic X. 
 
 * **Step 2:** Now you are familiar with the basics of Topic X, you will want to read Chapter 2 of Textbook Y, which delves into more of the mathematical underpinnings. 
 
