corrections to explainers doc

--- a/contributor-docs/exercises.qmd
+++ b/contributor-docs/exercises.qmd
@@ -15,7 +15,7 @@ The structure of each published exercise will vary based on the nature of the ta
 * Give users space to map the problem themselves 
 : Have users translate the “client challenge” into a data analytic question that can be answered using the resources available. 
 
-*Make data exploration, cleaning and tidying part of the process 
+* Make data exploration, cleaning and tidying part of the process 
 : Data exploration and preparation are an important part of most – if not all – data science projects, so let users loose on messy datasets so they can figure out for themselves (a) what they’re working with and (b) what analytical approach makes sense given the features of the data and the problem at hand. 
 
 * Integrate ethics 
@@ -35,7 +35,7 @@ The structure of each published exercise will vary based on the nature of the ta
 :::{.callout-warning collapse="true"}
 ## Spoiler warning 
 
-Collapsible callouts like this make the hints and tips visible only to those who want to see them.  
+Collapsible callouts like this make hints and tips visible only to those who want to see them.  
 :::
 
 *Bring different resources together.* Exercises provide an ideal opportunity to draw together different strands of the Real World Data Science platform: [case studies](case-studies.qmd) could provide inspiration or pointers for how to tackle a particular challenge; [explainers](explainers.qmd) might contain useful information about the tools and techniques to apply to specific types of data; and if you're looking for a suitable set of data, it may already be listed in our [datasets](datasets.qmd) section.
