--- a/editors-blog/meet-the-team/meet-the-team.qmd
+++ b/editors-blog/meet-the-team/meet-the-team.qmd
@@ -106,7 +106,7 @@ I am passionate about promoting best practice in data science and believe that i
 
 I am a research officer and data scientist at Health Data Research UK and a fellow of the RSS. My background is in mathematical statistics and health data science, and my research interests span novel analytical and computational methods for statistical inference in panel data and population health. I am supporting the development of the Real World Data Science platform in the context of health with a specific focus on how health data can be harnessed through data linkage and analysis to answer important questions and improve the lives of our population. 
 
-**Isabel Sasson**
+**Isabel Sassoon**
 
 ::: {.column-margin}
 ![](images/Isabel.png)
