updated contributor guidelines

--- a/contributor-docs/contributor-guidelines.qmd
+++ b/contributor-docs/contributor-guidelines.qmd
@@ -19,6 +19,7 @@ Real World Data Science is built on [Quarto](https://quarto.org/), the new open-
 
 2. Working with the editor, draw up a short content brief, containing the following:
     + Title of submission
+    + Author name(s) and affiliation(s)
     + Theme/topic area
     + Target audience 
     + Synopsis or sell line, summarising the story and its importance/value (100 words max.) 
