Added social links

--- a/contact.qmd
+++ b/contact.qmd
@@ -7,9 +7,13 @@ toc: false
 
 **Email:** [b.tarran@rss.org.uk](mailto:b.tarran@rss.org.uk)
 
+**GitHub:** [@realworlddatascience](https://github.com/realworlddatascience)
+
 **Twitter:** [@rwdatasci](https://twitter.com/rwdatasci)
 
-**GitHub:** [@realworlddatascience](https://github.com/realworlddatascience)
+**Mastodon:** [@rwdatasci](https://fosstodon.org/@rwdatasci)
+
+**Linkedin:** [RSS Real World Data Science](https://www.linkedin.com/showcase/rss-real-world-data-science)
 
 ## Advertising and commercial
 
