Added back link to DSB page

--- a/news-and-views/datasciencebites/posts/2022-08-05-model-selection/model-selection.qmd
+++ b/news-and-views/datasciencebites/posts/2022-08-05-model-selection/model-selection.qmd
@@ -71,4 +71,4 @@ So what is the takeaway? Researchers need to specify the goal of their analysis 
 **Annie Xie** is a PhD student in statistics at the University of Chicago. Currently, she is interested in statistical genetics research. In her free time, she enjoys hiking, painting, and exploring Chicago.
 
 ## About DataScienceBites
-**DataScienceBites** is written by graduate students and early career researchers in data science (and related subjects) at universities throughout the world, as well as industry researchers. We publish digestible, engaging summaries of interesting new pre-print and peer-reviewed publications in the data science space, with the goal of making scientific papers more accessible. DataScienceBites is published by Real World Data Science, and is part of the [Science Bites](https://sciencebites.org/) [network of sites](https://sciencebites.org/sciencebites-sites-galaxy/). Find out how to [become a contributor](/contributor-docs/call-for-contributions.qmd)
+[**DataScienceBites**](/news-and-views/datasciencebites/index.qmd) is written by graduate students and early career researchers in data science (and related subjects) at universities throughout the world, as well as industry researchers. We publish digestible, engaging summaries of interesting new pre-print and peer-reviewed publications in the data science space, with the goal of making scientific papers more accessible. DataScienceBites is published by Real World Data Science, and is part of the [Science Bites](https://sciencebites.org/) [network of sites](https://sciencebites.org/sciencebites-sites-galaxy/). Find out how to [become a contributor](/contributor-docs/call-for-contributions.qmd)
