redirect for old team page

--- a/news-and-views/editors-blog/posts/2022-10-18-meet-the-team/meet-the-team.qmd
+++ b/news-and-views/editors-blog/posts/2022-10-18-meet-the-team/meet-the-team.qmd
@@ -11,7 +11,7 @@ toc: false
 image: images/team.png
 image-alt: Portrait photos of 12 members of the Real World Data Science Editorial team
 aliases: 
-  - /editors-blog/meet-the-team/meet-the-team.html
+  - /editors-blog/meet-the-team/meet-the-team.qmd
 ---
 ## Editor
 **Brian Tarran**
