remove DSB for live site

--- a/news-and-views/index.qmd
+++ b/news-and-views/index.qmd
@@ -4,7 +4,7 @@ subtitle: Blogs, columns and opinion from our contributors and editors
 listing:
   contents: 
   - editors-blog
-  - datasciencebites
+  # - datasciencebites
   - "!index.qmd"
   sort: "date desc"
   type: default
