added DSB to index page, plus minor text edits

--- a/news-and-views/datasciencebites/posts/2022-08-05-model-selection/model-selection.qmd
+++ b/news-and-views/datasciencebites/posts/2022-08-05-model-selection/model-selection.qmd
@@ -7,25 +7,24 @@ categories:
   - Statistics
   - Ecology
 author: Annie Xie
-date: 08/05/2022
+date: 11/21/2022
 image: images/jeremy-perkins-UgNjyPkphtU-unsplash.jpg
 image-alt: An orange ring on black background. Photo by Jeremy Perkins on Unsplash.
 toc: true
-# image: images/team.png
-# image-alt: Portrait photos of 12 members of the Real World Data Science Editorial team
 ---
-
-A statistical toolbox in some ways is like an endless buffet. There are tons of statistical methods out there, ranging from linear models to statistical tests to neural networks. In addition, with increasing amounts of data, new applications from other fields, and increased computational power, methods are constantly being created or improved upon. Having so many possibilities, of course, has its perks. But researchers inevitably must face this daunting question: what method do you choose and why?
-
 :::{.callout-note collapse="false"}
-## About the paper 
+## About the paper and this post
 
 **Title:** A practical guide to selecting models for exploration, inference, and prediction in ecology.
 
-**Author(s) and year:** Andrew T. Tredennick, Giles Hooker, Stephen Ellner, Peter B. Adler, 2021.
+**Author(s) and year:** Andrew T. Tredennick, Giles Hooker, Stephen Ellner, Peter B. Adler (2021).
 
-**Journal:** *Ecology*, open access: [HTML](https://esajournals.onlinelibrary.wiley.com/doi/10.1002/ecy.3336), [ePDF](https://esajournals.onlinelibrary.wiley.com/doi/epdf/10.1002/ecy.3336). 
+**Status:** Published in *Ecology*, open access: [HTML](https://esajournals.onlinelibrary.wiley.com/doi/10.1002/ecy.3336), [ePDF](https://esajournals.onlinelibrary.wiley.com/doi/epdf/10.1002/ecy.3336). 
+
+**Editor's note:** This post is republished with permission from [MathStatBites](https://mathstatbites.org/navigating-the-black-hole-of-statistics-model-selection%ef%bf%bc/) to demonstrate the Bites concept. See [here](model-selection.html#about-datasciencebites) for more information.
 :::
+
+A statistical toolbox in some ways is like an endless buffet. There are tons of statistical methods out there, ranging from linear models to statistical tests to neural networks. In addition, with increasing amounts of data, new applications from other fields, and increased computational power, methods are constantly being created or improved upon. Having so many possibilities, of course, has its perks. But researchers inevitably must face this daunting question: what method do you choose and why?
 
 In their paper, Tredennick *et al.* claim that there are three primary goals for statistical modeling in ecology: **exploration**, **inference**, and **prediction**. Exploration is the process of finding patterns in data and creating scientific hypotheses. Inference is the process of assessing whether data supports a hypothesis, and prediction refers to the ability to make accurate predictions for future data. You may be wondering, “Aren’t all of these goals related?” The answer is yes. However, conducting a statistically-sound analysis that accomplishes all three tasks is no easy feat. Tredennick *et al.* present a case study that highlights how even when using the same data set, each goal involves a nuanced analysis that can lead to different models and results.
 
