--- a/news-and-views/editors-blog/posts/2022-10-18-meet-the-team/meet-the-team.qmd
+++ b/news-and-views/editors-blog/posts/2022-10-18-meet-the-team/meet-the-team.qmd
@@ -12,6 +12,7 @@ image: images/team.png
 image-alt: Portrait photos of 12 members of the Real World Data Science Editorial team
 aliases: 
   - /editors-blog/meet-the-team/meet-the-team.qmd
+comments: false
 ---
 ## Editor
 **Brian Tarran**
