Add image, rename file

--- a/news-and-views/editors-blog/posts/2022-11-23-LMM-content-warning/LLM-content-warning.qmd
+++ b/news-and-views/editors-blog/posts/2022-11-23-LMM-content-warning/LLM-content-warning.qmd
@@ -8,9 +8,10 @@ categories:
   - AI
 author: Brian Tarran
 date: 11/23/2022
-toc: false
-image: images/TeresaBerndtsson-LetterWord_Text_Taxonomy-1000x1333.jpg
+toc: true
+image: images/TeresaBerndtsson-LetterWord-Text-Taxonomy-1000x1333.jpg
 image-alt: A black keyboard at the bottom of the picture has an open book on it, with red words in labels floating on top, with a letter A balanced on top of them. The perspective makes the composition form a kind of triangle from the keyboard to the capital A. The AI filter makes it look like a messy, with a kind of cartoon style.
+license: CC BY-SA
 ---
 Anyone who has ever been set a writing task will probably have wished at some point that somebody else could write it for them. As a journalist of 20-plus years, the thought has certainly crossed my mind more than a few times. Which probably explains why a recent headline in Nature caught my attention: [“Could AI help you to write your next paper?”](https://www.nature.com/articles/d41586-022-03479-w) 
 
@@ -36,10 +37,16 @@ But the drawback of this approach is that these models have bias, because they a
 
 The other issue is that LLMs are massive. GPT-3 has something like 75 billion parameters, and it cost millions to train it from scratch. It's not energy efficient at all. It's not sustainable. It's not something that normal companies can afford. You might need something like a couple of hundred GPUs [graphics processing units] running for a month or so to train an LLM, and this is going to cost millions in cloud environments if you don't own the hardware yourself. Large tech companies do own the hardware, so for them it's not a problem. But the carbon that you burn by doing this, you could probably fly around the globe once. So it’s not a sustainable approach to building models.  
 
-Also, LLMs are quite expensive to use. If you wanted to use one of these large language models in a contact centre, for example, then you would have to run maybe a few hundred of them in parallel because you get that many requests from customers. But to provide this capacity, the amount of memory needed would be massive, so it is probably still cheaper to use humans. With the added benefit that humans actually understand questions and know what they are talking about. 
+Also, LLMs are quite expensive to use. If you wanted to use one of these large language models in a contact centre, for example, then you would have to run maybe a few hundred of them in parallel because you get that many requests from customers. But to provide this capacity, the amount of memory needed would be massive, so it is probably still cheaper to use humans – with the added benefit that humans actually understand questions and know what they are talking about.
 
-Researchers are obviously quite interested in them, though, and they are asking scientific questions of these models to see what kind of answers they get. 
-: **DN:** Yes, they are. But you don't really know what is going to come out of an LLM when you prompt them. And you may need to craft the input to get something out that is useful. Also, LLMs sometimes make up stuff – what the Nature article refers to as “hallucinations”.  
+![](images/TeresaBerndtsson-LetterWord-Text-Taxonomy-1000x1333.jpg){fig-alt="A black keyboard at the bottom of the picture has an open book on it, with red words in labels floating on top, with a letter A balanced on top of them. The perspective makes the composition form a kind of triangle from the keyboard to the capital A. The AI filter makes it look like a messy, with a kind of cartoon style." width="500" fig-align="center"}
+
+::: {.column-margin}
+Letter Word Text Taxonomy by [Teresa Berndtsson](https://www.linkedin.com/in/teresa-berndtsson/) / [Better Images of AI](https://www.betterimagesofai.org) / [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/)
+:::
+
+Researchers are obviously quite interested in LLMs, though, and they are asking scientific questions of these models to see what kinds of answers they get. 
+: **DN:** Yes, they are. But you don't really know what is going to come out of an LLM when you prompt it. And you may need to craft the input to get something out that is useful. Also, LLMs sometimes make up stuff – what the Nature article refers to as “hallucinations”.  
 
 These tools have copyright issues, too. For example, they can generate computer code because code has been part of their training input, but various people have looked into it and found that [some models generate code verbatim](https://analyticsindiamag.com/github-copilot-the-latest-in-the-list-of-ai-generative-models-facing-copyright-allegations/) from what others have posted to GitHub. So, it's not guaranteed that what you get out is actually new text. It might be just regurgitated text. A student might find themselves in a pickle where they think that they have created a text that seems new, but actually it has plagiarism in some of the passages. 
 
