--- a/index.qmd
+++ b/index.qmd
@@ -5,6 +5,11 @@ sidebar: false
 
 Welcome to the home of **Real World Data Science**, a new project from the [Royal Statistical Society](https://rss.org.uk/). This site and its content are being created and curated by data science practitioners and leaders with a single goal in mind: to help you deliver high quality, ethical, impactful data science in your workplace.
 
+::: {.callout-note appearance="simple"}
+## 'News and views' section has launched 
+Check out our new [**Editors' blog**](/news-and-views/editors-blog/) for news, updates, and discussions from the Editorial Board. 
+:::
+
 ## What are our aims?
 Real World Data Science aims to be a trusted, go-to source for high-quality, engaging and inspiring content which helps data science students, practitioners and leaders to: 
 
