--- a/news-and-views/editors-blog/posts/2022-11-23-LLMs-content-warning/LLM-content-warning.qmd
+++ b/news-and-views/editors-blog/posts/2022-11-23-LLMs-content-warning/LLM-content-warning.qmd
@@ -15,7 +15,7 @@ license: CC BY-SA
 ---
 Anyone who has ever been set a writing task will probably have wished at some point that somebody else could write it for them. As a journalist of 20-plus years, the thought has certainly crossed my mind more than a few times. Which probably explains why a recent headline in Nature caught my attention: [“Could AI help you to write your next paper?”](https://www.nature.com/articles/d41586-022-03479-w) 
 
-The article, by Matthew Hutson, looks at how researchers are using artificial intelligence (AI) tools built on large language models (LMMs) as “assistants”. Starting with a prompt, such as “Write a headline for a blog post about large language models being used by academic researchers as research assistants”, an LLM will produce a text output. For example, using the same prompt with [OpenAI’s GPT-3](https://openai.com/api/), I got: 
+The article, by Matthew Hutson, looks at how researchers are using artificial intelligence (AI) tools built on large language models (LLMs) as “assistants”. Starting with a prompt, such as “Write a headline for a blog post about large language models being used by academic researchers as research assistants”, an LLM will produce a text output. For example, using the same prompt with [OpenAI’s GPT-3](https://openai.com/api/), I got: 
 
 > “New research assistants: large language models” 
 
