add blogroll to homepage

--- a/index.qmd
+++ b/index.qmd
@@ -1,13 +1,28 @@
 ---
 title: "A showcase for data science in action"
 sidebar: false
+listing:
+  - id: blogs
+    contents: 
+    - /news-and-views/editors-blog
+    # - datasciencebites
+    - "!index.qmd"
+    sort: "date desc"
+    type: default
+    categories: false
+    sort-ui: false
+    filter-ui: false
+    feed: false
 ---
 
 Welcome to the home of **Real World Data Science**, a new project from the [Royal Statistical Society](https://rss.org.uk/). This site and its content are being created and curated by data science practitioners and leaders with a single goal in mind: to help you deliver high quality, ethical, impactful data science in your workplace.
 
-::: {.callout-note appearance="simple"}
-## 'News and views' section has launched 
-Check out our new [**Editors' blog**](/news-and-views/editors-blog/) for news, updates, and discussions from the Editorial Board. 
+::: {.callout-note appearance="simple" collapse="false"}
+## Latest upates 
+
+::: {#blogs}
+::: 
+
 :::
 
 ## What are our aims?
