--- a/news-and-views/editors-blog/posts/2022-10-18-meet-the-team/meet-the-team.qmd
+++ b/news-and-views/editors-blog/posts/2022-10-18-meet-the-team/meet-the-team.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Meet the team"
-subtitle: Introducing the editors of Real World Data Science
-description: Brief biographies of the project team
+description: |
+  Introducing the editors of Real World Data Science
 categories:
   - People
   - Biographies
