--- a/contact.qmd
+++ b/contact.qmd
@@ -13,7 +13,7 @@ toc: false
 
 **Mastodon:** [@rwdatasci](https://fosstodon.org/@rwdatasci)
 
-**Linkedin:** [RSS Real World Data Science](https://www.linkedin.com/showcase/rss-real-world-data-science)
+**LinkedIn:** [RSS Real World Data Science](https://www.linkedin.com/showcase/rss-real-world-data-science)
 
 ## Advertising and commercial
 
